search view model and di for search and repository

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">TestHH1</string>
+    <string name="app_name">TestHH</string>
+    <string name="error_message">Что-то пошло не так</string>
 </resources>
